--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,8 @@ option{
   width: 528px;
   height: 36px;
   background-color: white;
-  color: black;
+  border: #ece8e8;
+ /* color: black;*/
 }
 .btnpro:hover{
   cursor: pointer;
@@ -263,6 +264,9 @@ margin-top: -3px;
  /* padding: 10px;*/
   background-color:white;
   border: solid #ece8e8 1px;
+  display: flex;
+  align-items: center;
+  justify-content:left;
 }
 
 .tag-name {
@@ -271,8 +275,8 @@ margin-top: -3px;
 
 .plus {
   position: absolute;
-  left: 5px;
-  bottom: 5px;
+  left: 3px;
+  bottom: 3px;
   display: none;
   font-weight:bolder;
 }
@@ -285,7 +289,7 @@ margin-top: -3px;
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 1px solid red;
+  border: 1px solid #D75100;
 }
 
 .tag:hover .plus {
@@ -297,8 +301,22 @@ margin-top: -3px;
 }
 
 .tag:hover .plus {
-    color:red
+    color:#D75100
 }
 .name1:hover{
   border: 1px solid #D75100;
+ 
+}
+.name2:hover{
+  border: 1px solid #D75100;
+  cursor: pointer;
+}
+.sp1:hover{
+  margin-left: 20px;
+}
+.mm{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:left;
 }
